# Copyright (c) 2022-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("../../../ressched.gni")

group("unittest") {
  testonly = true
  deps = [
    ":resschedeventreporter_test",
    ":resschedfileutil_test",
    ":resschedhitracechain_test",
    ":resschedjsonutil_test",
    ":resschedstringutil_test",
    ":resschedsystemutil_test",
    ":resschedtimeutil_test",
  ]
}

module_output_path =
    "resource_schedule_service/resource_schedule_service/ressched/common"

ohos_unittest("resschedeventreporter_test") {
  module_out_path = module_output_path
  cflags = [
    "-Dprivate=public",
    "-Dprotected=public",
  ]
  include_dirs = [
    "./include",
    "${ressched_common}/include",
  ]

  sources = [ "src/res_sched_event_reporter_test.cpp" ]

  deps = [ "${ressched_common}:ressched_common_utils" ]

  external_deps = []

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  branch_protector_ret = "pac_ret"
}

ohos_unittest("resschedfileutil_test") {
  module_out_path = module_output_path
  cflags = [
    "-Dprivate=public",
    "-Dprotected=public",
  ]
  include_dirs = [
    "./include",
    "${ressched_common}/include",
  ]

  sources = [ "src/res_sched_file_util_test.cpp" ]

  deps = [ "${ressched_common}:ressched_common_utils" ]

  external_deps = []

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  branch_protector_ret = "pac_ret"
}

ohos_unittest("resschedhitracechain_test") {
  module_out_path = module_output_path
  cflags = [
    "-Dprivate=public",
    "-Dprotected=public",
  ]
  include_dirs = [
    "./include",
    "${ressched_common}/include",
  ]

  sources = [ "src/res_sched_hitrace_chain_test.cpp" ]

  deps = [ "${ressched_common}:ressched_common_utils" ]

  external_deps = [ "hitrace:libhitracechain" ]

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  branch_protector_ret = "pac_ret"
}

ohos_unittest("resschedjsonutil_test") {
  module_out_path = module_output_path
  resource_config_file = "${ressched_common}/test/resource/ohos_test.xml"
  cflags = [
    "-Dprivate=public",
    "-Dprotected=public",
  ]
  include_dirs = [
    "./include",
    "${ressched_common}/include",
  ]

  sources = [ "src/res_sched_json_util_test.cpp" ]

  deps = [ "${ressched_common}:ressched_common_utils" ]

  external_deps = [ "json:nlohmann_json_static" ]

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  branch_protector_ret = "pac_ret"
}

ohos_unittest("resschedstringutil_test") {
  module_out_path = module_output_path
  cflags = [
    "-Dprivate=public",
    "-Dprotected=public",
  ]
  include_dirs = [
    "./include",
    "${ressched_common}/include",
  ]

  sources = [ "src/res_sched_string_util_test.cpp" ]

  deps = [ "${ressched_common}:ressched_common_utils" ]

  external_deps = [ "json:nlohmann_json_static" ]

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  branch_protector_ret = "pac_ret"
}

ohos_unittest("resschedsystemutil_test") {
  module_out_path = module_output_path
  cflags = [
    "-Dprivate=public",
    "-Dprotected=public",
  ]
  include_dirs = [
    "./include",
    "${ressched_common}/include",
  ]

  sources = [ "src/res_sched_system_util_test.cpp" ]

  deps = [ "${ressched_common}:ressched_common_utils" ]

  external_deps = []

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  branch_protector_ret = "pac_ret"
}

ohos_unittest("resschedtimeutil_test") {
  module_out_path = module_output_path
  cflags = [
    "-Dprivate=public",
    "-Dprotected=public",
  ]
  include_dirs = [
    "./include",
    "${ressched_common}/include",
  ]

  sources = [ "src/res_sched_time_util_test.cpp" ]

  deps = [ "${ressched_common}:ressched_common_utils" ]

  external_deps = []

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  branch_protector_ret = "pac_ret"
}

ohos_unittest("lrucache_test") {
  module_out_path = module_output_path
  cflags = [
    "-Dprivate=public",
    "-Dprotected=public",
  ]
  include_dirs = [
    "./include",
    "${ressched_common}/include",
  ]

  sources = [ "src/res_sched_lru_cache_test.cpp" ]

  deps = [ "${ressched_common}:ressched_common_utils" ]

  external_deps = []

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  branch_protector_ret = "pac_ret"
}
