# Copyright (c) 2022-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/test.gni")
import("../../../ressched.gni")

config("client_private_config") {
  include_dirs = [ "${ressched_common}/include" ]
}

config("client_public_config") {
  include_dirs = [ "include" ]
}

ohos_shared_library("ressched_client") {
  configs = [ ":client_private_config" ]

  public_configs = [ ":client_public_config" ]

  sources = [
    "src/res_sched_client.cpp",
    "src/res_sched_notifier_death_recipient.cpp",
    "src/res_sched_service_proxy.cpp",
    "src/res_sched_systemload_notifier_proxy.cpp",
    "src/res_sched_systemload_notifier_stub.cpp",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single",
    "samgr:samgr_proxy",
  ]

  install_images = [
    system_base_dir,
    updater_base_dir,
  ]

  public_external_deps = [ "json:nlohmann_json_static" ]

  innerapi_tags = [ "platformsdk" ]
  version_script = "libressched_client.versionscript"
  subsystem_name = "resourceschedule"
  part_name = "resource_schedule_service"

  branch_protector_ret = "pac_ret"

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
}
