# Copyright (c) 2025-2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../../../ressched.gni")

config("client_private_config") {
  include_dirs = [ "${ressched_common}/include" ]
}

config("suspend_public_config") {
  include_dirs = [
    "include",
  ]
}

ohos_shared_library("suspend_manager_base_client") {
  configs = [ ":client_private_config" ]

  public_configs = [ ":suspend_public_config" ]
  deps = [
    "${ressched_client}:ressched_client",
  ]

  sources = [
    "src/suspend_manager_base_client.cpp",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_core",
    "ipc:ipc_single",
    "samgr:samgr_proxy",
  ]

  public_external_deps = [ "json:nlohmann_json_static" ]
  innerapi_tags = [ "platformsdk" ]
  version_script = "libsuspend_manager_base_client.versionscript"

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  branch_protector_ret = "pac_ret"

  subsystem_name = "resourceschedule"
  part_name = "resource_schedule_service"
}