# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("../../../../ressched.gni")

module_output_path = "resource_schedule_service/ressched"

ohos_unittest("SocperfPluginTest") {
  module_out_path = module_output_path

  include_dirs = [
    "../../include",
    "${ressched_interfaces}/innerkits/ressched_client/include",
    "${ressched_services}/resschedmgr/pluginbase/include",
  ]

  sources = [ "socperf_plugin_test.cpp" ]

  deps = [
    "${ressched_plugins}/socperf_plugin:socperf_plugin",
    "//third_party/googletest:gtest_main",
  ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "soc_perf:socperf_client",
  ]
}

group("unittest") {
  testonly = true
  deps = [
    ":SocperfPluginTest",
  ]
}
